--- a/lights/light.yaml
+++ b/lights/light.yaml
@@ -25,7 +25,6 @@ output:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-
   ap:
     ssid: "nodemcu test"
     password: "test1234"
@@ -33,24 +32,25 @@ wifi:
 captive_portal:
 api:
 ota:
-
 logger:
-  level: DEBUG
+mqtt:
+  broker: 192.168.0.38
 
 light:
   - platform: binary
     name: "Bedroom"
     id: light_1
     output: bedroom_1
+
   - platform: binary
     name: "Kitchen"
     id: light_2
     output: kitchen_1
+
   - platform: binary
     name: "Bathroom"
     id: light_3
     output: bathroom_1
-
 
 sensor:
   - platform: dht
@@ -62,20 +62,3 @@ sensor:
       name: "Home room humidity"
       id: "home_room_humidity"
     update_interval: 5s
-
-# interval:
-#   - interval: 500ms
-#     then:
-#       - output.turn_on: kitchen
-#       - delay: 250ms
-#       - output.turn_off: kitchen
-#   - interval: 1000ms
-#     then:
-#       - output.turn_on: bedroom
-#       - delay: 250ms
-#       - output.turn_off: bedroom
-#   - interval: 1500ms
-#     then:
-#       - output.turn_on: bathroom
-#       - delay: 250ms
-#       - output.turn_off: bathroom
